# photos_app

./: .gitignore  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml
.docker/: Dockerfile
app/: models.py  routers.py  serializers.py  views.py
photos_mng/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: client.py  file_client.py  model.py
tests/test_scripts/: test_client.py  test_file_client.py
